--- a/modèle.html
+++ b/modèle.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>exercice tp2</title>
 	</head>
 
