--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
 	</head>
 
 	<body>
-    	<header>
+
+    	<header class="wrapper">
         <h1>[TEST] Metal Gear Solid V : The Phantom Pain (PS4)</h1>
    		 	<nav id="menu">
-                <a href="#deuxieme"> trac </a>
+                <a href="#end"> trac </a>
     		</nav>
     	</header>
-    <main>
+    <main class="wrapper">
 
 
-        	<article id="deuxieme">
+        	<article class="wrapper">
 
 
 
@@ -123,7 +124,7 @@ Malgré ces écueils, il faut tout de même avouer que Metal Gear Solid V : The 
 
     </main>
 
-    <footer>
+    <footer class="wrapper" id="end">
     <a href="#menu"> retour au menu </a>
     </footer>
     </body>
