--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     	<header class="wrapper">
         <h1>[TEST] Metal Gear Solid V : The Phantom Pain (PS4)</h1>
    		 	<nav id="menu">
-                <a href="#end"> trac </a>
+                <a href="#un"> trac </a>
+                <a href="#deux"> trac </a>
+                <a href="#trois"> trac </a>
+                <a href="#quatre"> trac </a>
+                <a href="#cinq"> trac </a>
+                <a href="#six"> trac </a>
+                <a href="#sept"> trac </a>
     		</nav>
     	</header>
     <main class="wrapper">
@@ -20,15 +26,14 @@
 
 
 
-								<h3>L'évolution des jeux indépendants</h3>
                 CG - le 17/12/2015 - jeux vidéo, dossier <br>
 
-								C’est le 1er septembre 2015 que Metal Gear Solid V : The Phantom Pain a enfin
+								<strong>C’est le 1er septembre 2015 que Metal Gear Solid V : The Phantom Pain a enfin
 									débarqué sur consoles et PC, soit un an et demi après son prologue
 									 intitulé « Ground Zeroes ». Volet ultime de la saga d’infiltration
 									 `créée par Hideo Kojima, celui-ci nous place une nouvelle fois
-									 aux commandes du charismatique Snake aka « Big Boss », dans un opus aussi grisant que déroutant.<br>
-								 <h3>Un serpent en liberté</h3>
+									 aux commandes du charismatique Snake aka « Big Boss », dans un opus aussi grisant que déroutant.<br></strong>
+								 <h3 id="un">Un serpent en liberté</h3>
 								 MGS V : Ground Zeroes se clôturait avec la destruction de la Mother Base
 									  entraînant l’annihilation totale de Snake et de son armée
 										de mercenaires « Militaires Sans Frontières ». Néanmoins,
@@ -42,7 +47,7 @@
 										Concrètement, le titre reprend le gameplay de MGS V : Ground Zeroes en y améliorant certains aspects. On se retrouve donc aux commandes d’un Snake agile, capable d’escalader des obstacles, de sprinter, ou encore de conduire des véhicules.
 										 Sur le terrain, deux grandes possibilités s’offrent à nous. On peut parcourir les différents environnements librement afin d’effectuer des opérations secondaires, ou exécuter des missions principales dans le but de faire avancer l’histoire découpée en épisodes.
 										  Lors de celles-ci, il faut accomplir des objectifs bien précis comme extraire un prisonnier, éliminer une cible ou encore détruire une colonne de blindés au sein d’une zone délimitée et parfois, dans un temps imparti.
-								 <h3>A l’aventure compagnon !</h3>
+								 <h3 id="deux">A l’aventure compagnon !</h3>
 								<p>Pour nous aider dans notre tâche, on peut compter sur le soutien d’un hélicoptère de combat,
 									 servant également à nous trimballer entre les différents théâtres d’opérations,
 									  ainsi que sur un coéquipier contrôlé par l’ordinateur et auquel il est possible de donner des ordres plus ou moins nombreux selon le taux d’affinité que l’on partage avec lui.
@@ -50,14 +55,14 @@
 										  repérant et marquant automatiquement tout ce qui nous entoure à 100 mètres à la ronde (soldats,
 											 prisonniers, armes, champ de mines, plantes, animaux…). Plus tard dans le jeu, deux autres compagnons un peu plus à l’aise en cas d’échanges de tirs avec l’ennemi deviennent disponibles : la belle Quiet et le D-Walker.
 											 La première nous offre une couverture sans faille grâce à ses talents de sniper alors que le second, un véhicule bipède très mobile et personnalisable avec de l’armement lourd, augmente largement notre taux de survie face à un tank ou un hélico adverse.</p>
-								<h3>Jamais sans mon carton</h3>
+								<h3 id="trois">Jamais sans mon carton</h3>
 								<p>’il est possible d’effectuer la plupart des missions en mode rambo, il ne faut pas oublier que MGS V est avant tout un jeu d’infiltration.
 									 Il est donc souvent plus judicieux d’avancer sans se faire repérer plutôt que de tout faire péter au lance-roquettes. De plus, la difficulté du jeu s’adapte automatiquement à notre manière de jouer.
 									  Par exemple, si l’on persiste à la jouer trop bourrin, les soldats ennemis se muniront rapidement d’équipements de protection ainsi que d’armes lourdes pour nous renvoyer la politesse puissance 10.
 										D’ailleurs, bien que l’on observe encore quelques réactions qui frisent la débilité profonde, l’IA adverse est tout de même plus organisée et virulente que dans les précédents volets, passant en alerte au moindre évènement trahissant notre présence dans le coin.
 										Enfin, un joueur choisissant la discrétion lors de l’accomplissement des missions obtiendra plus de PIM (pour Produit Intérieur Militaire), qui est tout simplement la monnaie du jeu et qui permet de financer tout un tas de choses, dont la construction de notre base militaire off-shore.</p>
 
-								<h3>I want you for Big Boss Army</h3>
+								<h3 id="quatre">I want you for Big Boss Army</h3>
 								Metal Gear Solid V : Phantom Pain reprend le concept de gestion de sa base introduit dans l’épisode Portable Ops et sublimé dans MGS : Peace Walker. Comme dans cet opus, notre Mother Base contient plusieurs unités. La section R&D s’occupe du développement de nouvelles armes et équipements,
 								 les unités de renseignement et de soutien apportent un appui logistique à Snake sur le terrain (marquage de points d’intérêts sur la carte, largage d’approvisionnement…),
 								 la plate-forme médicale maintient le personnel de la base en bonne santé et l’équipe de développement de base s’occupe des ressources indispensables à son expansion.
@@ -69,7 +74,7 @@
 									En effet, dès les premières heures de jeu on obtient le fameux système Fulton, nous permettant d’extraire presque tout ce qu’on croise sur le terrain : prisonniers, ennemis, mais aussi matériel, véhicules, animaux (!). Toutefois, avant d’extraire n’importe qui, on s’assurera de son rang (allant de « E » à « S++ ») en l’analysant grâce à une fonction intégrée à nos jumelles.
 									En résumé, plus le rang des soldats recrutés est élevé, plus le niveau de l’unité dans laquelle ils sont affectés grimpe.
 
-									<h3>Un renard qui a de la gueule</h3>
+									<h3 id="cinq">Un renard qui a de la gueule</h3>
 									La jouabilité aux commandes de Snake couplé à la gestion de la Mother Base donne au final une expérience de jeu vraiment plaisante. De plus, même si les objectifs des missions principales et secondaires sont rapidement redondants, la lassitude ne s’installe pas aussi vite que ce qu’on pourrait penser au premier abord. Cela est notamment dû au fait qu’il y a des dizaines de façons de remplir un objectif selon notre équipement,
 									 mais surtout selon l’heure et les conditions météorologiques. Car le cycle jour/nuit ainsi que la météo ne sont pas là que pour faire joli ; ils ont une énorme influence sur notre manière de jouer et d’appréhender les situations qui se présentent à nous.
 									Ainsi, infiltrer un endroit en pleine nuit sous une pluie battante sera plus facile dû à la baisse du champ de vision des ennemis, bien plus important en plein jour.
@@ -79,7 +84,7 @@
 									  Par contre, on déplore les nombreux bugs de collisions, anecdotiques pour certains, mais franchement énervants pour d’autres, allant parfois jusqu’à nous handicaper lors de phases d’infiltration millimétrées.
 										<br>L’ambiance sonore quant à elle est excellente malgré l’absence du main theme de la saga. J’ai personnellement beaucoup apprécié les différentes références aux années 80, entre les cassettes audio des hits de cette époque que l’on ramasse sur notre route et les bruitages vintages dont je vous laisse la surprise. Si vous avez 30 ans ou plus, vous aurez obligatoirement une petite larmichette de nostalgie au coin de l’œil à l’écoute de certaines chansons !
 
-										<h3>Not yet Snake! It’s not over yet!</h3>
+										<h3 id="six">Not yet Snake! It’s not over yet!</h3>
 										Maintenant que l’on a fini d’aborder les qualités de ce 5e opus, intéressons-nous à ce qui fâche : son scénario ainsi que sa mise en scène. Autant vous avertir tout de suite, si comme moi vous pensiez que Metal Gear Solid V comblerait le vide dans la timeline de la série entre la fin de MGS : Peace Walker et le tout premier Metal Gear, avec le premier face à face entre Big Boss et Solid Snake,
 										 vous vous mettez le doigt dans l’œil jusqu’au trognon ! The Phantom Pain se concentre uniquement sur l’année 1984 et les révélations qu’il distille sur l’histoire globale de la franchise ne sont finalement pas si indispensables.
 										 <br>
@@ -92,7 +97,7 @@ Malgré ces écueils, il faut tout de même avouer que Metal Gear Solid V : The 
 
 
 
-										<h3>Team Solid VS Team Liquid</h3>
+										<h3 id="sept">Team Solid VS Team Liquid</h3>
 										En addition de son contenu solo déjà bien fourni, MGS V : The Phantom Pain inclut plusieurs fonctionnalités en ligne. La première est le système de FOB (Forward Operating Base ou Base Avancée).
 										Sélectionnable depuis le menu de l’idroid vers le milieu de l’aventure, une mission FOB offre la possibilité d’infiltrer la base avancée d’un autre joueur afin de lui piquer du personnel et des ressources.
 										Toutefois, attention, car on peut nous attaquer en retour. Pour éviter la casse il faut veiller à ce que les défenses de notre FOB soient prêtes à faire face à une intrusion en augmentant le niveau de notre équipe de sécurité et en développant des moyens de défense
