--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     	<header class="wrapper">
         <h1>[TEST] Metal Gear Solid V : The Phantom Pain (PS4)</h1>
    		 	<nav id="menu">
-                <a href="#un"> trac </a>
-                <a href="#deux"> trac </a>
-                <a href="#trois"> trac </a>
-                <a href="#quatre"> trac </a>
-                <a href="#cinq"> trac </a>
-                <a href="#six"> trac </a>
-                <a href="#sept"> trac </a>
+                <a href="#un"> trac </a><br />
+                <a href="#deux"> trac </a><br />
+                <a href="#trois"> trac </a><br />
+                <a href="#quatre"> trac </a><br />
+                <a href="#cinq"> trac </a><br />
+                <a href="#six"> trac </a><br />
+                <a href="#sept"> trac </a><br />
     		</nav>
     	</header>
     <main class="wrapper">
