--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
 
 	<body>
 
-    	<header class="wrapper">
+    	<header>
         <h1>[TEST] Metal Gear Solid V : The Phantom Pain (PS4)</h1>
    		 	<nav id="menu">
-                <a href="#un"> trac </a><br />
-                <a href="#deux"> trac </a><br />
-                <a href="#trois"> trac </a><br />
-                <a href="#quatre"> trac </a><br />
-                <a href="#cinq"> trac </a><br />
-                <a href="#six"> trac </a><br />
-                <a href="#sept"> trac </a><br />
+                <a href="#un"> trac </a>
+                <a href="#deux"> trac </a>
+                <a href="#trois"> trac </a>
+                <a href="#quatre"> trac </a>
+                <a href="#cinq"> trac </a>
+                <a href="#six"> trac </a>
+                <a href="#sept"> trac </a>
     		</nav>
     	</header>
-    <main class="wrapper">
+    <main>
 
 
-        	<article class="wrapper">
+        	<article>
 
 
 
@@ -129,7 +129,7 @@ Malgré ces écueils, il faut tout de même avouer que Metal Gear Solid V : The 
 
     </main>
 
-    <footer class="wrapper" id="end">
+    <footer id="end">
     <a href="#menu"> retour au menu </a>
     </footer>
     </body>
