--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     	<header>
         <h1>[TEST] Metal Gear Solid V : The Phantom Pain (PS4)</h1>
    		 	<nav id="menu">
-                <a href="#un"> Un serpent en liberté </a>
-                <a href="#deux"> A l'aventure compagnon </a>
-                <a href="#trois"> Jamais sans mon carton </a>
-                <a href="#quatre"> I want you  for Big Boss Army </a>
-                <a href="#cinq"> Un renard qui a de la gueule </a>
-                <a href="#six"> Not yet Snake! It's not over yet!  </a>
-                <a href="#sept"> Team Solid VS Team Liquid </a>
+                <a href="#un"> Un serpent en liberté </a><br>
+                <a href="#deux"> A l'aventure compagnon </a><br>
+                <a href="#trois"> Jamais sans mon carton </a><br>
+                <a href="#quatre"> I want you  for Big Boss Army </a><br>
+                <a href="#cinq"> Un renard qui a de la gueule </a><br>
+                <a href="#six"> Not yet Snake! It's not over yet!  </a><br>
+                <a href="#sept"> Team Solid VS Team Liquid </a><br>
     		</nav>
     	</header>
     <main>
