--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 										En effet, fini les intérieurs confinés, MGS V nous offre la possibilité de déambuler à
 									  l’air libre dans les vallées afghanes et un peu plus tard en Afrique centrale.
 									  <br/>
+									  <img src="asset/img/img1.jpg">
+									  <br />
 										Concrètement, le titre reprend le gameplay de MGS V : Ground Zeroes en y améliorant certains aspects. On se retrouve donc aux commandes d’un Snake agile, capable d’escalader des obstacles, de sprinter, ou encore de conduire des véhicules.
 										 Sur le terrain, deux grandes possibilités s’offrent à nous. On peut parcourir les différents environnements librement afin d’effectuer des opérations secondaires, ou exécuter des missions principales dans le but de faire avancer l’histoire découpée en épisodes.
 										  Lors de celles-ci, il faut accomplir des objectifs bien précis comme extraire un prisonnier, éliminer une cible ou encore détruire une colonne de blindés au sein d’une zone délimitée et parfois, dans un temps imparti.</p>
@@ -72,6 +74,8 @@
 								  elles permettent, en cas de réussite, d’obtenir des ressources, des PIM et du nouveau personnel. On peut aussi déployer nos forces sur des missions visant à détruire les armes et les équipements des soldats ennemis,
 									 ces actions ayant une influence directe sur les troupes rencontrées par Snake.
 									 <br>
+									 <img src="asset/img/img2.jpg">
+									 <br>
 									 Cependant, pour faire correctement tourner sa Mother Base, augmenter le niveau de ses unités et par conséquent avoir accès à de meilleures armes et un meilleur soutien, il va falloir trouver du personnel compétent. Encore une fois les habitués de MGS : Peace Walker ne seront pas dépaysés avec un système de recrutement similaire à ce que l’on trouve dans celui-ci.
 									En effet, dès les premières heures de jeu on obtient le fameux système Fulton, nous permettant d’extraire presque tout ce qu’on croise sur le terrain : prisonniers, ennemis, mais aussi matériel, véhicules, animaux (!). Toutefois, avant d’extraire n’importe qui, on s’assurera de son rang (allant de « E » à « S++ ») en l’analysant grâce à une fonction intégrée à nos jumelles.
 									En résumé, plus le rang des soldats recrutés est élevé, plus le niveau de l’unité dans laquelle ils sont affectés grimpe.</p>
@@ -80,6 +84,8 @@
 									<p class="clear">La jouabilité aux commandes de Snake couplé à la gestion de la Mother Base donne au final une expérience de jeu vraiment plaisante. De plus, même si les objectifs des missions principales et secondaires sont rapidement redondants, la lassitude ne s’installe pas aussi vite que ce qu’on pourrait penser au premier abord. Cela est notamment dû au fait qu’il y a des dizaines de façons de remplir un objectif selon notre équipement,
 									 mais surtout selon l’heure et les conditions météorologiques. Car le cycle jour/nuit ainsi que la météo ne sont pas là que pour faire joli ; ils ont une énorme influence sur notre manière de jouer et d’appréhender les situations qui se présentent à nous.
 									Ainsi, infiltrer un endroit en pleine nuit sous une pluie battante sera plus facile dû à la baisse du champ de vision des ennemis, bien plus important en plein jour.
+									<br>
+									<img src="asset/img/img3.jpg">
 									<br>
 									Du côté de la réalisation, le FOX Engine, le moteur graphique maison créé presque pour l’occasion, livre un résultat très convaincant, mais pas sans reproches. Le bon ressenti concerne surtout le travail sur les effets de lumières, donnant lieu à de très belles images en particulier lors du levé et du coucher du soleil.
 									 L’animation des différents protagonistes est elle aussi de bonne facture, voire bluffante par moments (D-Dog semble tellement réel parfois !) et on apprécie grandement la fluidité constante du jeu qui tourne à 60 images/seconde sans aucun ralentissement.
