--- a/index.html
+++ b/index.html
@@ -6,21 +6,27 @@
 	</head>
 
 	<body class="main">
+
+
 <div class="etc">
     	<header>
+    	
         <h1>[TEST] Metal Gear Solid V : The Phantom Pain (PS4)</h1>
-   		 	<nav id="menu">
-                <a href="#un" class="btn"> Un serpent en liberté </a><br>
-                <a href="#deux" class="btn"> A l'aventure compagnon </a><br>
-                <a href="#trois"class="btn"> Jamais sans mon carton </a><br>
-                <a href="#quatre"class="btn"> I want you  for Big Boss Army </a><br>
-                <a href="#cinq"class="btn"> Un renard qui a de la gueule </a><br>
-                <a href="#six"class="btn"> Not yet Snake! It's not over yet!  </a><br>
-                <a href="#sept"class="btn"> Team Solid VS Team Liquid </a><br>
+        </div>
+   		 <nav class="menu">
+                <a href="#un" class="btn"> Un serpent en liberté </a>
+                <a href="#deux" class="btn"> A l'aventure compagnon </a>
+                <a href="#trois"class="btn"> Jamais sans mon carton </a>
+                <a href="#quatre"class="btn"> I want you  for Big Boss Army </a>
+                <a href="#cinq"class="btn"> Un renard qui a de la gueule </a>
+                <a href="#six"class="btn"> Not yet Snake! It's not over yet!  </a>
+                <a href="#sept"class="btn"> Team Solid VS Team Liquid </a>
     		</nav>
+    <main>	
     	</header>
-</div>
-    <main>
+
+
+
 
 
         	<article class="content">
