--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<link href='https://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="asset/css/style.css">
 		<title>exercice tp2</title>
 	</head>
 
 	<body class="main">
-
+ <main>
 
 <div class="etc">
     	<header>
     	
-        <h1>[TEST] Metal Gear Solid V : The Phantom Pain (PS4)</h1>
+        <h1>Metal Gear Solid V : The Phantom Pain (PS4)</h1>
         </div>
-   		 <nav class="menu">
+   		 <nav class="menu" id="menu">
                 <a href="#un" class="btn"> Un serpent en liberté </a>
                 <a href="#deux" class="btn"> A l'aventure compagnon </a>
                 <a href="#trois"class="btn"> Jamais sans mon carton </a>
@@ -22,7 +23,7 @@
                 <a href="#six"class="btn"> Not yet Snake! It's not over yet!  </a>
                 <a href="#sept"class="btn"> Team Solid VS Team Liquid </a>
     		</nav>
-    <main>	
+   	
     	</header>
 
 
